Fix a minor flex overflow issue

--- a/static/style.css
+++ b/static/style.css
@@ -15,7 +15,7 @@
 }
 
 .student {
-  width: 20%;
+  min-width: 20%;
   display: inline-flex;
 }
 
